# AFiD

./: CalcDissipationNu.F90  CalcMaxCFL.F90  CalcPlateNu.F90  CreateGrid.F90  CreateInitialConditions.F90  DeallocateVariables.F90  ExplicitTerms.F90  ExplicitTermsComp.F90  ExplicitTermsVX.F90  ExplicitTermsVY.F90  ExplicitTermsVZ.F90  GlobalQuantities.F90  HdfReadContinua.F90  ImplicitAndUpdateComp.F90  ImplicitAndUpdateTemp.F90  ImplicitAndUpdateVX.F90  ImplicitAndUpdateVY.F90  ImplicitAndUpdateVZ.F90  InitTimeMarchScheme.F90  InitVariables.F90  LocateLargeDivergence.F90  Makefile.am  QuitRoutine.F90  ReadFlowField.F90  ReadInputFile.F90  SetTempBCs.F90  SlabDumpRoutines.F90  SolveImpEqnUpdate_Comp.F90  SolvePressureCorrection.F90  StatRoutines.F90  TimeMarcher.F90  UpdateComp.F90  UpdateTemp.F90  UpdateVel.F90  WriteFlowField.F90  checkpoints.F90  grid.F90  halo_common.F90  interp.F90  main.F90  (+1 more)
